--- a/index.html
+++ b/index.html
@@ -5,8 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real Madrid FC</title>
     <style>
-        /* Your existing styles here */
-
+        body {
+            background-color: #0074D9;
+            color: white;
+            font-family: Arial, sans-serif;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        header {
+            background-color: #001f3f;
+            padding: 10px;
+            text-align: center;
+        }
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        .news {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+        .news-item {
+            background-color: #003366;
+            padding: 20px;
+            border-radius: 10px;
+            flex: 1 1 300px;
+        }
+        .footer {
+            background-color: #001f3f;
+            text-align: center;
+            padding: 10px;
+        }
         /* Hide the placeholder visually but still make it accessible to screen readers */
         .sr-only {
             position: absolute;
